--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -17,4 +17,5 @@
     <dimen name="search_edit_padding_horizontal">24dp</dimen>
     <dimen name="search_icon_size">16dp</dimen>
     <dimen name="search_max_lines">1</dimen>
+    <dimen name="search_cursor_width">2dp</dimen>
 </resources>
