--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -74,5 +74,6 @@
         <item name="android:textColorHint">?attr/editTextIconColor</item>
         <item name="android:textColor">@color/blackish_blue</item>
         <item name="android:layout_gravity">center_vertical</item>
+        <item name="android:textCursorDrawable">@drawable/cursor_edit_text</item>
     </style>
 </resources>
