--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -22,4 +22,5 @@
     <dimen name="artwork_size">45dp</dimen>
     <dimen name="artwork_margin">8dp</dimen>
     <dimen name="ic_size">13dp</dimen>
+    <dimen name="rounded_corners">2dp</dimen>
 </resources>
